2007-12-01 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 471: fix missing declarations of "err" introduced in SVN 466
	           (thanks to Chris Rankin)
        * SVN 470: perform byte_per_packet name changes in juju, osx and msw
	           too (thanks to Chris Rankin)
	
2007-11-30 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 469: Rename byte_per_packet to packet_size everywhere. Perform a
	           few cleanups rearding that too.
	* SVN 468: Revert SVN 464 and harmonize #includes.
	* SVN 467: Minor changes in header files. 
	* SVN 466: Add auto-iso stop in capture_stop functions 
	* SVN 465: Implement auto-iso for capture setup (beta).
	* SVN 464: Fix #include in utils.h (Johann Schoonees)

2007-11-29 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 463: Cleanup error codes, check enum types in *_set_* functions,
	           remove error messages in conversion functions (replaced by
		   returning a proper error code)
	* SVN 462: Remove the error DC1394_NO_CAMERA since it's not used
	           anymore
	* SVN 461: Merge three functions (feature mode capabilities) into a
	           single one
	* SVN 460: - slightly different interface for message logging
	           - enum types should have mutually exclusive values
		   - add min/max/num values for several enum types
		   - merge log.h in control.h

2007-11-28 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 459: added new error API, beta (Rudolf Leitgeb)
	* SVN 458: update of the README (Frederic Vernier)
	* SVN 457: fix color converion in grab_color_image2 (Frederic Vernier)
	* SVN 456: rename long function name dc1394_memory_is_save_in_operation
	           to shorter dc1394_memory_busy.
	* SVN 455: reinstate the verification code for video mode, format and
	           iso status
        * SVN 454: - temporarily remove the definition of the broadcast
	             function in control.h, since it's code has been
	             commented-out in control.c.