@@ -64,7 +64,7 @@ dc1394_get_registers (dc1394camera_t *camera, uint64_t offset,
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
 
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_read (cp->pcam, offset, value, num_regs);
 }
@@ -76,7 +76,7 @@ dc1394_set_registers (dc1394camera_t *camera, uint64_t offset,
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
 
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_write (cp->pcam, offset, value, num_regs);
 }
@@ -92,7 +92,7 @@ dc1394_get_control_registers (dc1394camera_t *camera, uint64_t offset,
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
 
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_read (cp->pcam,
       camera->command_registers_base + offset, value, num_regs);
@@ -105,7 +105,7 @@ dc1394_set_control_registers (dc1394camera_t *camera, uint64_t offset,
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
 
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_write (cp->pcam,
       camera->command_registers_base + offset, value, num_regs);
@@ -121,7 +121,7 @@ dc1394_get_adv_control_registers (dc1394camera_t *camera, uint64_t offset,
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
 
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_read (cp->pcam,
       camera->advanced_features_csr + offset, value, num_regs);
@@ -134,7 +134,7 @@ dc1394_set_adv_control_registers (dc1394camera_t *camera, uint64_t offset,
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
 
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_write (cp->pcam,
       camera->advanced_features_csr + offset, value, num_regs);
@@ -151,11 +151,11 @@ QueryFormat7CSROffset(dc1394camera_t *camera, dc1394video_mode_t mode, uint64_t 
   uint32_t temp;
 
   if (camera == NULL) {
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
   }
 
   if (!dc1394_is_video_mode_scalable(mode))
-    return DC1394_FAILURE;
+    return DC1394_INVALID_VIDEO_FORMAT;
   
   retval=dc1394_get_control_register(camera, REG_CAMERA_V_CSR_INQ_BASE + ((mode - DC1394_VIDEO_MODE_FORMAT7_MIN) * 0x04U), &temp);
   *offset=temp*4;
@@ -168,11 +168,11 @@ dc1394_get_format7_register(dc1394camera_t *camera, unsigned int mode, uint64_t 
 {
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
   if (camera == NULL) {
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
   }
 
   if (!dc1394_is_video_mode_scalable(mode))
-    return DC1394_FAILURE;
+    return DC1394_INVALID_VIDEO_FORMAT;
 
   if (camera->format7_csr[mode-DC1394_VIDEO_MODE_FORMAT7_MIN]==0) {
     if (QueryFormat7CSROffset(camera, mode, &camera->format7_csr[mode-DC1394_VIDEO_MODE_FORMAT7_MIN]) != DC1394_SUCCESS) {
@@ -190,11 +190,11 @@ dc1394_set_format7_register(dc1394camera_t *camera, unsigned int mode, uint64_t 
 {
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
   if (camera == NULL) {
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
   }
 
   if (!dc1394_is_video_mode_scalable(mode))
-    return DC1394_FAILURE;
+    return DC1394_INVALID_VIDEO_FORMAT;;
 
   if (camera->format7_csr[mode-DC1394_VIDEO_MODE_FORMAT7_MIN]==0) {
     QueryFormat7CSROffset(camera, mode, &camera->format7_csr[mode-DC1394_VIDEO_MODE_FORMAT7_MIN]);
@@ -216,7 +216,7 @@ QueryAbsoluteCSROffset(dc1394camera_t *camera, dc1394feature_t feature, uint64_t
   uint32_t quadlet=0;
   
   if (camera == NULL) {
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
   }
 
   FEATURE_TO_ABS_VALUE_OFFSET(feature, absoffset);
@@ -236,7 +236,7 @@ dc1394_get_absolute_register(dc1394camera_t *camera, unsigned int feature, uint6
   uint64_t absoffset;
 
   if (camera == NULL) {
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
   }
 
   QueryAbsoluteCSROffset(camera, feature, &absoffset);
@@ -252,7 +252,7 @@ dc1394_set_absolute_register(dc1394camera_t *camera, unsigned int feature, uint6
   uint64_t absoffset;
 
   if (camera == NULL) {
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
   }
 
   QueryAbsoluteCSROffset(camera, feature, &absoffset);
@@ -269,7 +269,7 @@ dc1394_get_PIO_register(dc1394camera_t *camera, uint64_t offset, uint32_t *value
 {
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_read_quad(cp->pcam, camera->PIO_control_csr+offset,
       value);
@@ -280,7 +280,7 @@ dc1394_set_PIO_register(dc1394camera_t *camera, uint64_t offset, uint32_t value)
 {
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_write_quad(cp->pcam, camera->PIO_control_csr+offset,
       value);
@@ -296,7 +296,7 @@ dc1394_get_SIO_register(dc1394camera_t *camera, uint64_t offset, uint32_t *value
 {
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_read_quad(cp->pcam, camera->SIO_control_csr+offset,
       value);
@@ -307,7 +307,7 @@ dc1394_set_SIO_register(dc1394camera_t *camera, uint64_t offset, uint32_t value)
 {
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_write_quad(cp->pcam, camera->SIO_control_csr+offset, value);
 }
@@ -321,7 +321,7 @@ dc1394_get_strobe_register(dc1394camera_t *camera, uint64_t offset, uint32_t *va
 {
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_read_quad(cp->pcam, camera->strobe_control_csr+offset, value);
 }
@@ -331,7 +331,7 @@ dc1394_set_strobe_register(dc1394camera_t *camera, uint64_t offset, uint32_t val
 {
   dc1394camera_priv_t * cp = DC1394_CAMERA_PRIV (camera);
   if (camera == NULL)
-    return DC1394_FAILURE;
+    return DC1394_CAMERA_NOT_INITIALIZED;
 
   return platform_camera_write_quad(cp->pcam, camera->strobe_control_csr+offset, value);
 }
