@@ -1,4 +1,7 @@
 2007-12-01 Damien Douxchamps http://damien.douxchamps.net/
+	* SVN 472: better error code returned by register access functions
+	
+2007-12-01 Damien Douxchamps http://damien.douxchamps.net/
 	* SVN 471: fix missing declarations of "err" introduced in SVN 466
 	           (thanks to Chris Rankin)
         * SVN 470: perform byte_per_packet name changes in juju, osx and msw
